correções layout criação do quizz

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <input type="text" placeholder="Título do nível">
                         <input type="text" placeholder="% de acerto mínima">
                         <input type="text" placeholder="URL da imagem do nível">
-                        <input type="text" placeholder="Descrição do nível">
+                        <textarea type="text" placeholder="Descrição do nível"></textarea>
                     </div>
                 </div>
                 <button>Finalizar Quizz</button>
