Implementa a navegação após Quizz

--- a/index.html
+++ b/index.html
@@ -78,24 +78,11 @@
 
             <div class="quizz-top"></div>
 
-            <ul class="questions">
-                <!-- <li class="question result">
-                    <div class="question-top">
-                        88% de acerto: Você é praticamente um aluno de Hogwarts!
-                    </div>
-
-                    <div class="result-details">
-                        <img src="img/deferias.jpg">
-                        <p>
-                            Parabéns Potterhead! Bem-vindx a Hogwarts, aproveite o loop infinito de comida e clique no botão abaixo para usar o vira-tempo e reiniciar este teste.
-                        </p>
-                    </div>
-                </li> -->
-            </ul>
+            <ul class="questions"></ul>
 
             <div class="end-buttons">
-                <button class="primary">Reiniciar Quizz</button>
-                <button class="secondary">Voltar pra home</button>
+                <button class="primary" onClick="resetQuizz()">Reiniciar Quizz</button>
+                <button class="secondary" onClick="openQuizzesList()">Voltar pra home</button>
             </div>
         </div>
         <!-- FIM TELA DO QUIZZ -->
