--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="top">
             <h1>BuzzQuizz</h1>
         </div>
-        <div class="quizzes-list hidden">
+        <div class="quizzes-list">
             <div class="create-quizz">
                 <p>Você não criou nenhum quizz ainda :(</p>
                 <button>Criar Quizz</button>
@@ -48,31 +48,12 @@
             </div>
             <div class="all-quizzes">
                 <h3>Todos os Quizzes</h3>
-                <div class="quizzes">
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                </div>
+                <div class="quizzes"></div>
             </div>
         </div>
 
         <!-- INICIO TELA DO QUIZZ -->
-        <div class="quizz-details">
+        <div class="quizz-details hidden">
             <p class="loading-message hidden">Carregando...</p>
             <p class="error-message hidden">Não foi possível pegar o quizz</p>
 
