--- a/index.html
+++ b/index.html
@@ -20,31 +20,12 @@
                 <p>Você não criou nenhum quizz ainda :(</p>
                 <button>Criar Quizz</button>
             </div>
-            <div class="your-quizzes">
+            <div class="your-quizzes hidden">
                 <div class="button-plus">
                     <h3>Seus Quizzes</h3>
                     <ion-icon name="add-circle-sharp"></ion-icon>
                 </div>
-                <div class="quizzes">
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                </div>
+                <div class="quizzes"></div>
             </div>
             <div class="all-quizzes">
                 <h3>Todos os Quizzes</h3>
