--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="top">
             <h1>BuzzQuizz</h1>
         </div>
-        <div class="quizzes-list hidden">
+        <div class="quizzes-list">
             <div class="create-quizz">
                 <p>Você não criou nenhum quizz ainda :(</p>
-                <button>Criar Quizz</button>
+                <button onclick="loadQuizzRules()">Criar Quizz</button>
             </div>
             <div class="your-quizzes">
                 <div class="button-plus">
                     <h3>Seus Quizzes</h3>
-                    <ion-icon name="add-circle-sharp"></ion-icon>
+                    <ion-icon name="add-circle-sharp" onclick="loadQuizzRules()"></ion-icon>
                 </div>
                 <div class="quizzes">
                     <div class="quizz">
@@ -153,88 +153,12 @@
         <!-- FIM TELA DO QUIZZ -->
 
         <!-- CRIAÇÃO DO QUIZZ -->
-        <div class="quiz-creation">
-            <div class="page-form">
-                <span>Comece pelo começo</span>
-                <div class="form-box">
-                    <input class="tittle" type="text" placeholder="Título do seu quizz">
-                    <input class="url-img" type="text" placeholder="URL da imagem do seu quizz">
-                    <input class="qty-questions" type="text" placeholder="Quantidade de perguntas do quizz">
-                    <input class="qty-levels" type="text" placeholder="Quantidade de níveis do quizz">
-                </div>
-                <button>Prosseguir para criar perguntas</button>
-            </div>
-            <div class="page-form">
-                <span>Crie suas perguntas</span>
-                <div class="form-box">
-                    <div class="edit-entry">
-                        <span>Pergunta 1</span>
-                        <ion-icon name="create-outline"></ion-icon>
-                    </div>
-                    <div class="fields">
-                        <div class="question-phrase">
-                            <input type="text" placeholder="Texto da pergunta">
-                            <input type="text" placeholder="Cor de fundo da pergunta">
-                        </div>
-                        <div class="correct-answer">
-                            <span>Resposta Correta</span>
-                            <input type="text" placeholder="Resposta correta">
-                            <input type="text" placeholder="URL da imagem">
-                        </div>
-                        <div class="wrong-answers">
-                            <span>Respostas Incorretas</span>
-                            <div class="wrong">
-                                <input type="text" placeholder="Resposta incorreta 1">
-                                <input type="text" placeholder="URL da imagem 1">
-                            </div>
-                            <div class="wrong">
-                                <input type="text" placeholder="Resposta incorreta 2">
-                                <input type="text" placeholder="URL da imagem 2">
-                            </div>
-                            <div class="wrong">
-                                <input type="text" placeholder="Resposta incorreta 3">
-                                <input type="text" placeholder="URL da imagem 3">
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <button>Prosseguir para criar níveis</button>
-            </div>
-            <div class="page-form">
-                <span>Agora, decida os níveis</span>
-                <div class="form-box">
-                    <div class="edit-entry">
-                        <span>Nível 1</span>
-                        <ion-icon name="create-outline"></ion-icon>
-                    </div>
-                    <div class="fields">
-                        <input type="text" placeholder="Título do nível">
-                        <input type="text" placeholder="% de acerto mínima">
-                        <input type="text" placeholder="URL da imagem do nível">
-                        <textarea type="text" placeholder="Descrição do nível"></textarea>
-                    </div>
-                </div>
-                <button>Finalizar Quizz</button>
-            </div>
-            <div class="page-form">
-                <span>Seu quizz está pronto!</span>
-                <div class="quizz-finished">
-                    <div class="quizz">
-                        <img src="img/deferias.jpg" />
-                        <div class="overlay">
-                            <h4 class="title">Acerte os personagens corretos dos Simpsons e prove seu amor!</h4>
-                        </div>
-                    </div>
-                </div>
-                <button>Acessar Quizz</button>
-                <button class="back-home">Voltar para home</button>
-            </div>
-        </div>
         <!-- FIM CRIAÇÃO DO QUIZZ -->
 
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="quizz-creation.js"></script>
 </body>
 </html>
