--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="top">
-            <h1>BuzzQuizz</h1>
+            <a href=""><h1>BuzzQuizz</h1></a>
         </div>
 
         <div class="loading-container">
